--- a/BE/package.json
+++ b/BE/package.json
@@ -35,6 +35,7 @@
 		"mongoose": "^8.5.4",
 		"nodemailer": "^6.9.15",
 		"nodemon": "^3.1.4",
-		"pdf-lib": "^1.17.1"
+		"pdf-lib": "^1.17.1",
+		"socket.io": "^4.8.1"
 	}
 }
