--- a/FE/package.json
+++ b/FE/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.5.1",
+    "antd": "^5.24.0",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
