Lưu lại thay đổi trước khi pull

--- a/BE/package.json
+++ b/BE/package.json
@@ -25,6 +25,7 @@
 		"typescript": "^5.5.4"
 	},
 	"dependencies": {
+		"@types/socket.io": "^3.0.2",
 		"axios": "^1.7.7",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
