--- a/FE/package.json
+++ b/FE/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^4.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-scripts": "^5.0.1",
