--- a/FE/package.json
+++ b/FE/package.json
@@ -24,7 +24,9 @@
     "react-router": "^7.1.5",
     "react-scripts": "^5.0.1",
     "react-signature-canvas": "^1.0.7",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4"
   },
