--- a/FE/package.json
+++ b/FE/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.10.0",
     "react-signature-canvas": "^1.0.7",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
