--- a/BE/package.json
+++ b/BE/package.json
@@ -19,7 +19,9 @@
 		"@types/express": "^4.17.21",
 		"@types/html-pdf-node": "^1.0.2",
 		"@types/jsonwebtoken": "^9.0.6",
+		"@types/moment": "^2.13.0",
 		"@types/node": "^22.5.0",
+		"@types/node-schedule": "^2.1.7",
 		"@types/nodemailer": "^6.4.16",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4"
@@ -34,6 +36,7 @@
 		"html-pdf-node": "^1.0.8",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.5.4",
+		"node-schedule": "^2.1.1",
 		"nodemailer": "^6.9.15",
 		"nodemon": "^3.1.4",
 		"pdf-lib": "^1.17.1",
