--- a/FE/package.json
+++ b/FE/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.24.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "framer-motion": "^12.4.10",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^18.3.1",
