--- a/BE/package.json
+++ b/BE/package.json
@@ -19,6 +19,7 @@
 		"@types/express": "^4.17.21",
 		"@types/html-pdf-node": "^1.0.2",
 		"@types/jsonwebtoken": "^9.0.6",
+		"@types/jwk-to-pem": "^2.0.3",
 		"@types/moment": "^2.13.0",
 		"@types/node": "^22.5.0",
 		"@types/node-schedule": "^2.1.7",
@@ -37,6 +38,7 @@
 		"html-pdf-node": "^1.0.8",
 		"jsonwebtoken": "^9.0.2",
 		"moment": "^2.30.1",
+		"jwk-to-pem": "^2.0.7",
 		"mongoose": "^8.5.4",
 		"node-schedule": "^2.1.1",
 		"nodemailer": "^6.9.15",
