--- a/FE/package.json
+++ b/FE/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.5.1",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.4.10",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^18.3.1",
