update hóa đơn tự động, post và get dữ liệu ngân hàng, update đăng nhiều ảnh phòng cùng lúc

--- a/FE/.env
+++ b/FE/.env
@@ -1,1 +1,2 @@
-VITE_GG_CLIENT_ID=752749487215-thp4udmogerl7g825rfnfvc33gfieq4t.apps.googleusercontent.com
+# FE dùng Vite: nên yêu cầu bắt đầu bằng VITE_ để truy cập được import.meta.env. ...
+VITE_GOOGLE_CLIENT_ID=752749487215-thp4udmogerl7g825rfnfvc33gfieq4t.apps.googleusercontent.com
