--- a/BE/package.json
+++ b/BE/package.json
@@ -31,14 +31,15 @@
 		"@types/socket.io": "^3.0.2",
 		"axios": "^1.7.7",
 		"bcryptjs": "^2.4.3",
+		"cloudinary": "^2.6.0",
 		"cors": "^2.8.5",
 		"crypto": "^1.0.1",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"html-pdf-node": "^1.0.8",
 		"jsonwebtoken": "^9.0.2",
-		"moment": "^2.30.1",
 		"jwk-to-pem": "^2.0.7",
+		"moment": "^2.30.1",
 		"mongoose": "^8.5.4",
 		"node-schedule": "^2.1.1",
 		"nodemailer": "^6.9.15",
