--- a/FE/Dockerfile
+++ b/FE/Dockerfile
@@ -17,8 +17,7 @@ FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY --from=build /app/.env ./
 
-# Optional: copy custom nginx config (nếu cần cấu hình SPA route fallback)
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
