--- a/BE/package.json
+++ b/BE/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/html-pdf-node": "^1.0.2",
@@ -32,6 +33,8 @@
 		"axios": "^1.7.7",
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^2.6.0",
+		"cookie": "^1.0.2",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"crypto": "^1.0.1",
 		"dayjs": "^1.11.13",
